# poe-filter-updater

./: .gitignore  README.md  config.example.json  pyproject.toml
src/poe_filter_updater/: __main__.py  cli.py  fetch.py
tests/: test_fetch.py
