[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "poe-filter-updater"
version = "0.1.0"
description = "Update a local PoE 2 filter using poe.ninja economy data"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenCode" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
